examples/test/testpolicy3031.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3031
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key2: value9
      key35: value15
      key16: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value5
          key6: value24
          key31: value17
      podSelector:
        matchLabels:
          key25: value7
          key47: value29
